# captchabreaker

./: .gitignore  README.md  main.py  pyproject.toml
captchabreaker/: __init__.py  breaker.py  tokenizer.py
