[project]
name = "captchabreaker"
description = "A library to break captchas using ONNX models."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Sreeram Kandimalla", email = "kandimalla.sreeram@gmail.com" },
]
dependencies = [
    "torch",
    "onnx",
    "onnxruntime",
    "torchvision",
    "Pillow",
]
dynamic = [
    "version"
]

[project.urls]
homepage = "https://github.com/ramSeraph/captchabreaker"
repository = "https://github.com/ramSeraph/captchabreaker.git"

[build-system]
requires = [
    "hatchling",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "captchabreaker/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "captchabreaker",
]

[tool.hatch.build.targets.wheel]
include = [
    "captchabreaker",
]
